--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ junitExt = "1.1.4"
 espressoCore = "3.5.0"
 lifecycle = "2.6.0-alpha01"
 retrofit = "2.9.0"
+okHttp = "4.10.0"
 coroutine = "1.6.4"
 gson = "2.10"
 hilt = "2.43.1"
@@ -40,6 +41,7 @@ lifecycle_runtime_compose = { module = "androidx.lifecycle:lifecycle-runtime-com
 # Retrofit
 retrofit_core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit_gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+okhttp_logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
 # Moshi
 gson_core = { module = "com.google.code.gson:gson", version.ref = "gson" }
 # Coil
@@ -65,7 +67,7 @@ test_espresso = { module = "androidx.test.espresso:espresso-core", version.ref =
 compose = ["compose.ui", "compose.material", "compose.tooling.preview", "compose.icons"]
 compose_debug = ["compose.tooling", "compose.ui.test.manifest"]
 coroutine = ["coroutine.core", "coroutine.android"]
-retrofit = ["retrofit.core", "retrofit.gson"]
+retrofit = ["retrofit.core", "retrofit.gson", "okhttp.logging"]
 
 [plugins]
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
